--- a/src/CollectArticles.ipynb
+++ b/src/CollectArticles.ipynb
@@ -14,32 +14,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "#The 'query' key contains the search terms exactly\n",
-    "args = {'query':'Apis Mellifera','apiKey':'582c2ee616e8c4119ae4201ce59a5e06'}\n",
-    "r = requests.get('http://api.elsevier.com/content/search/scopus?'+urllib.urlencode(args))\n",
+    "url = 'http://api.elsevier.com/content/search/scopus?query=Apis+Mellifera&apiKey=582c2ee616e8c4119ae4201ce59a5e06&date=1980-2018&sort=+coverDate'\n",
+    "r = requests.get(url)\n",
     "data = r.json()\n",
-    "results = int(data['search-results']['opensearch:totalResults'])\n"
+    "results = int(data['search-results']['opensearch:totalResults'])\n",
+    "titles = set({\"\"})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "39085\n"
+      "37753\n"
      ]
     }
    ],
    "source": [
-    "print results\n",
+    "print(results)\n",
     "login = open(\"./LoginInfo.txt\",\"r\")\n",
     "user = login.readline()\n",
     "password = login.readline()\n",
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -64,12 +65,12 @@
     "bSoupObj = BeautifulSoup(abstractPage.content,\"html5lib\")\n",
     "abstractText = bSoupObj.find(\"section\",{\"id\":\"authorKeywords\"}).findAll(\"span\",{\"class\":\"badges\"})\n",
     "# print abstractText\n",
-    "print abstractText"
+    "print(abstractText)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -84,22 +85,14 @@
     "sKeywords = \"\"\n",
     "for word in bSoupObj.find(\"section\",{\"id\":\"indexedKeywords\"}).findAll(\"span\"):\n",
     "    sKeywords+= word.text+\", \"\n",
-    "print sKeywords[:-2]"
+    "print(sKeywords[:-2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "25\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "f = open(\"../data/paperTable1.tsv\",\"w\")\n",
     "entry_size = len(data['search-results']['entry'])\n",
@@ -115,46 +108,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
-      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
-      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
-      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
-      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
-      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
-      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
-      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
-      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
-      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
-      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
-      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
-      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
-      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
-      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
-      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
-      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
-      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
-      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
-      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
-      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
-      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
-      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
-      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
-      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
-      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
-      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
-      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
-      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
-      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
-      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
-      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
-      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
-      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
-      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
-      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
-      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
-      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
-      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
-      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n"
+      "no abs\n",
+      "no abs\n",
+      "no abs\n",
+      "no abs\n",
+      "no abs\n",
+      "no abs\n",
+      "no abs\n"
      ]
     }
    ],
@@ -164,15 +124,15 @@
     "# start_point = 25\n",
     "import threading\n",
     "import CustomApi as api\n",
-    "dist = results/3\n",
+    "dateRange = '1980-1996'\n",
+    "abstracts = []\n",
     "def readAbstracts(start,stop):\n",
     "    while(start < stop):\n",
-    "        data = requests.get('http://api.elsevier.com/content/search/scopus?'+urllib.urlencode(args)+'&start='+str(start)).json()\n",
     "        entries = None\n",
     "        try:\n",
-    "            print data\n",
+    "            url = 'http://api.elsevier.com/content/search/scopus?query=Apis+Mellifera&apiKey=582c2ee616e8c4119ae4201ce59a5e06&date=1980-2018&sort=+coverDate&start='+str(start)\n",
+    "            data = requests.get(url).json()\n",
     "            entries = data['search-results']['entry']\n",
-    "            print entries\n",
     "        except:\n",
     "            start += 25\n",
     "            continue\n",
@@ -194,17 +154,23 @@
     "\n",
     "                #prints title, abstract, tags, and date created\n",
     "                if abstractText.encode(\"utf8\")==\"[No abstract available]\":\n",
-    "                    print(\"no abs\")\n",
+    "                    print \"no abs\"\n",
     "                else:\n",
     "                    try:\n",
-    "                        #abstracts.append(api.MyAbstract(title=entry['dc:title'].encode(\"utf8\"),date=entry['prism:coverDate'].encode(\"utf8\"),text=abstractText.encode(\"utf8\")))\n",
-    "                        f.write(entry['dc:title'].encode(\"utf8\")+\"\\t\"+abstractText.encode(\"utf8\")+\"\\t\"+aKeywords[:-2].encode(\"utf8\")+\"\\t\"+sKeywords[:-2].encode(\"utf8\")+\"\\t\"+entry['prism:coverDate'].encode(\"utf8\")+\"\\n\")\n",
-    "                    except:\n",
+    "                        a = api.MyAbstract(title=entry['dc:title'].encode(\"utf8\"),date=entry['prism:coverDate'].encode(\"utf8\"),text=str(abstractText.encode(\"utf8\")+\"\\t\"+aKeywords[:-2].encode(\"utf8\")+\"\\t\"+sKeywords[:-2].encode(\"utf8\")))\n",
+    "                        if a.title not in titles:\n",
+    "                            titles.add(a.title)\n",
+    "                            abstracts.append(a)\n",
+    "                        else:\n",
+    "                            pass\n",
+    "                        #f.write(entry['dc:title'].encode(\"utf8\")+\"\\t\"+abstractText.encode(\"utf8\")+\"\\t\"+aKeywords[:-2].encode(\"utf8\")+\"\\t\"+sKeywords[:-2].encode(\"utf8\")+\"\\t\"+entry['prism:coverDate'].encode(\"utf8\")+\"\\n\")\n",
+    "                    except Exception as ex:\n",
+    "                        print ex\n",
     "                        pass\n",
     "        start += 25\n",
-    "# thread1 = threading.Thread(target=readAbstracts,args=(5000,6000))\n",
-    "# thread2 = threading.Thread(target=readAbstracts,args=(6000,7000))\n",
-    "# thread3 = threading.Thread(target=readAbstracts,args=(7000,8000))\n",
+    "# thread1 = threading.Thread(target=readAbstracts,args=(0,1500))\n",
+    "# thread2 = threading.Thread(target=readAbstracts,args=(1500,2*dist))\n",
+    "# thread3 = threading.Thread(target=readAbstracts,args=(2*dist,3*dist))\n",
     "# thread1.start()\n",
     "# thread2.start()\n",
     "# thread3.start()\n",
@@ -213,8 +179,8 @@
     "#         continue\n",
     "#     else:\n",
     "#         break\n",
-    "readAbstracts(5000,6000)\n",
-    "#readAbstracts(0,25)"
+    "\n",
+    "readAbstracts(0,100)"
    ]
   },
   {
@@ -234,17 +200,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "abstracts[0]\n",
-    "\n"
+    "url = 'http://api.elsevier.com/content/search/scopus?query=Apis+Mellifera&apiKey=582c2ee616e8c4119ae4201ce59a5e06&date=1980-2018&sort=+coverDate&start='+str(0)\n",
+    "data = requests.get(url).json()\n",
+    "entries = data['search-results']['entry']\n",
+    "entries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "92"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "f.close()"
+    "len(abstracts)"
    ]
   },
   {
