--- a/src/TopicModeling.ipynb
+++ b/src/TopicModeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
        "'Evidence of the Juvenile Hormone Methyl(2E,6E)-10,11-epoxy-3,7,11-trimethyl-2,6-dodecadienoate(JH-3) in Insects of Four Orders'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,10 @@
     "def removeStops(text):\n",
     "    stopsRemoved = processing.remove_stopwords(text.lower().translate(None, string.punctuation))\n",
     "    words = stopsRemoved.split(\" \")\n",
-    "    stemmedWords = [ps.stem(w) for w in words]\n",
+    "    stemmedWords = []\n",
+    "    for w in words:\n",
+    "        if len(ps.stem(w)) > 2:\n",
+    "            stemmedWords.append(ps.stem(w))\n",
     "    return ' '.join(stemmedWords)\n",
     "# Each abstract has a 'title':String, 'date':datetime.datetime, 'text':String, and 'keywords':String\n",
     "abstracts = [api.MyAbstract._make([art[1],datetime.strptime(art[2], '%Y'),removeStops(art[15]), removeStops(art[16])]) for art in entries]\n",
@@ -168,50 +171,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "numTopicsExport = 50\n",
     "\n",
-    "def exportResults(path, sortedVals):\n",
+    "def exportResults(path, sortedVals,wordDict):\n",
     "    seg = sortedVals[0][0:numTopicsExport]\n",
-    "    print seg\n",
-    "    #Edges and their weights\n",
+    "    #Edges and their weights [(a,b):weight]\n",
     "    edges = sortedVals[1]\n",
+    "    # set of (a,b)\n",
+    "    exportEdges = set({})\n",
+    "    exportNodes = set({})\n",
+    "    for node in seg:\n",
+    "        for e in node[\"edges\"]:\n",
+    "            exportEdges.add(e)\n",
+    "            a = wordDict[e[0]]\n",
+    "            b = wordDict[e[1]]\n",
+    "            exportNodes.add((a[\"tag\"],a[\"word\"],a[\"occurences\"]))\n",
+    "            exportNodes.add((b[\"tag\"],b[\"word\"],b[\"occurences\"]))\n",
+    "            \n",
     "    with open(path+\"nodes.csv\",\"w\") as file:\n",
     "        file.write(\"Id,Label,Weight\\n\")\n",
-    "        for val in seg:\n",
-    "            file.write(str(val[\"tag\"])+\",\"+val[\"word\"].encode('utf8')+','+str(val['occurences'])+'\\n')\n",
+    "        for val in exportNodes:\n",
+    "            file.write(str(val[0])+\",\"+val[1].encode('utf8')+','+str(val[2])+'\\n')\n",
     "    with open(path+'edges.csv',\"w\") as file:\n",
     "        file.write(\"Source,Target,Weight\\n\")\n",
     "        #We dont want to have duplicate edges written, so we want to make an aedge buffer and then write the buffer\n",
-    "        edgesToWrite = set([])\n",
-    "        for val in seg:\n",
-    "            #Edges a node has\n",
-    "            for edge in val[\"edges\"]:\n",
-    "                #Check if (a,b) is an edge else if (b,a) is an edge. The graph is undirected so we dont want duplicates\n",
-    "                if edge in edges.keys():\n",
-    "                    #Edge wasnt in the buffer, add it\n",
-    "                    if edge not in edgesToWrite:\n",
-    "                        edgesToWrite.add(edge)\n",
-    "                #(b,a) in edge list?\n",
-    "                elif (edge[1],edge[0]) in edges.keys():\n",
-    "                    #edge wasnt in the buffer\n",
-    "                    edgesToWrite.add(edge)\n",
-    "        for edge in edgesToWrite:\n",
-    "            file.write(str(edge[0])+\",\"+str(edge[1])+\",\"+str(edges[edge])+\"\\n\")"
+    "        for e in exportEdges:\n",
+    "            file.write(str(e[0])+\",\"+str(e[1])+\",\"+str(edges[e])+\"\\n\")\n",
+    "#         edgesToWrite = set([])\n",
+    "#         for val in seg:\n",
+    "#             #Edges a node has\n",
+    "#             for edge in val[\"edges\"]:\n",
+    "#                 #Check if (a,b) is an edge else if (b,a) is an edge. The graph is undirected so we dont want duplicates\n",
+    "#                 if edge in edges.keys():\n",
+    "#                     #Edge wasnt in the buffer, add it\n",
+    "#                     if edge not in edgesToWrite:\n",
+    "#                         edgesToWrite.add(edge)\n",
+    "#                 #(b,a) in edge list?\n",
+    "#                 elif (edge[1],edge[0]) in edges.keys():\n",
+    "#                     #edge wasnt in the buffer\n",
+    "#                     edgesToWrite.add(edge)\n",
+    "#         for edge in edgesToWrite:\n",
+    "#             file.write(str(edge[0])+\",\"+str(edge[1])+\",\"+str(edges[edge])+\"\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "import math as m\n",
     "def getResults(topics):\n",
     "    mapper = api.WordMapper()\n",
+    "    #Edges [(a,b):weight]\n",
     "    edges = {}\n",
     "    def updateEdgeFreq(vec1):\n",
     "        if vec1[0] == vec1[1]:\n",
@@ -241,17 +257,17 @@
     "        for w in words:\n",
     "            word = w[1]\n",
     "            wid = mapper.mapWord(word)\n",
-    "            if w[1] not in occurences.keys():\n",
-    "                occurences[w[1]] = {\"prob\":w[0],\"occurences\":1,\"edges\":wordEdges, \"tag\" : wid, \"word\":word}\n",
+    "            if wid not in occurences.keys():\n",
+    "                occurences[wid] = {\"prob\":w[0],\"occurences\":1,\"edges\":wordEdges, \"tag\" : wid, \"word\":word}\n",
     "            else:\n",
-    "                occurences[w[1]][\"occurences\"] += 1\n",
-    "                occurences[w[1]][\"prob\"] = max(occurences[w[1]][\"prob\"], w[0])\n",
+    "                occurences[wid][\"occurences\"] += 1\n",
+    "                occurences[wid][\"prob\"] = max(occurences[wid][\"prob\"], w[0])\n",
     "    return [occurences,edges]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,9 +297,9 @@
     "        sortedVals = [sorted(occurences[0].values(),key=lambda k:k[\"occurences\"],reverse=True),occurences[1]]\n",
     "        #####Release some of this memory please and thank you\n",
     "        selection = None\n",
-    "        occurences = None\n",
+    "        #occurences = None\n",
     "        #####\n",
-    "        exportResults(path,sortedVals)\n",
+    "        exportResults(path,sortedVals,occurences[0])\n",
     "        size = 0\n",
     "        start = i+1"
    ]
