--- a/src/TopicModeling.ipynb
+++ b/src/TopicModeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -43,12 +43,15 @@
     "#Number of passes the model should make\n",
     "passes = 75\n",
     "\n",
+    "#Keyphrase tracker\n",
+    "keyphraseTracker = api.KeyWordTracker()\n",
+    "\n",
     "#End Global Variables and Types"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +85,7 @@
        "'Evidence of the Juvenile Hormone Methyl(2E,6E)-10,11-epoxy-3,7,11-trimethyl-2,6-dodecadienoate(JH-3) in Insects of Four Orders'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +122,7 @@
     "            stemmedWords.append(ps.stem(w))\n",
     "    return ' '.join(stemmedWords)\n",
     "# Each abstract has a 'title':String, 'date':datetime.datetime, 'text':String, and 'keywords':String\n",
-    "abstracts = [api.MyAbstract._make([art[1],datetime.strptime(art[2], '%Y'),removeStops(art[15]), removeStops(art[16])]) for art in entries]\n",
+    "abstracts = [api.MyAbstract._make([art[1],datetime.strptime(art[2], '%Y'),removeStops(art[15]), art[16]]) for art in entries]\n",
     "abstracts.sort(key=lambda q: q.date.year)\n",
     "entries = None\n",
     "# Count word frequencies\n",
@@ -137,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,12 +188,14 @@
     "    exportEdges = set({})\n",
     "    exportNodes = set({})\n",
     "    for node in seg:\n",
+    "        exportNodes.add((node[\"tag\"],node[\"word\"],node[\"occurences\"]))\n",
     "        for e in node[\"edges\"]:\n",
-    "            exportEdges.add(e)\n",
     "            a = wordDict[e[0]]\n",
     "            b = wordDict[e[1]]\n",
-    "            exportNodes.add((a[\"tag\"],a[\"word\"],a[\"occurences\"]))\n",
-    "            exportNodes.add((b[\"tag\"],b[\"word\"],b[\"occurences\"]))\n",
+    "            if a in seg and b in seg:\n",
+    "                exportEdges.add(e)\n",
+    "                exportNodes.add((a[\"tag\"],a[\"word\"],a[\"occurences\"]))\n",
+    "                exportNodes.add((b[\"tag\"],b[\"word\"],b[\"occurences\"]))\n",
     "            \n",
     "    with open(path+\"nodes.csv\",\"w\") as file:\n",
     "        file.write(\"Id,Label,Weight\\n\")\n",
@@ -220,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,19 +272,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "api mellifera, 1394\n",
+      "honey bee, 588\n",
+      "honeybe, 513\n",
+      "pollin, 197\n",
+      "varroa jacobsoni, 146\n",
+      "varroa destructor, 135\n",
+      "forag, 113\n",
+      "insect, 100\n",
+      "hymenoptera, 82\n",
+      "pollen, 81\n",
+      "api, 75\n",
+      "bee, 65\n",
+      "african honey bee, 62\n",
+      "propoli, 60\n",
+      "honey, 59\n",
+      "social insect, 57\n",
+      "pheromon, 56\n",
+      "juvenil hormon, 56\n",
+      "american foulbrood, 55\n",
+      "api cerana, 55\n",
+      "apida, 54\n",
+      "learn, 52\n",
+      "royal jelli, 52\n",
+      "commun, 49\n",
+      "divis of labor, 45\n",
+      "reproduct, 42\n",
+      "nectar, 41\n",
+      "mushroom bodi, 40\n",
+      "microsatellit, 40\n",
+      "olfact, 40\n",
+      "api mellifera carnica, 40\n",
+      "resist, 40\n",
+      "api mellifera scutellata, 39\n",
+      "swarm, 39\n",
+      "api mellifera capensi, 38\n",
+      "acarapi woodi, 37\n",
+      "morphometr, 34\n",
+      "mitochondri dna, 34\n",
+      "waggl danc, 34\n",
+      "bombu, 33\n",
+      "stingless bee, 32\n",
+      "vision, 30\n",
+      "protein, 30\n",
+      "mtdna, 29\n",
+      "trophallaxi, 29\n",
+      "thermoregul, 29\n",
+      "drone, 28\n",
+      "ascosphaera api, 28\n",
+      "hypopharyng gland, 28\n",
+      "behavior, 28\n"
+     ]
+    }
+   ],
    "source": [
-    "%%capture\n",
+    "from difflib import SequenceMatcher\n",
     "size = 0\n",
     "start = 0\n",
     "import os\n",
     "occurences = None\n",
     "for i in range(0,len(selections)):\n",
+    "    keyphraseTracker = api.KeyWordTracker()\n",
     "    size += len(selections[i])\n",
     "    if size >=50:\n",
     "        selection = api.flaten(selections[start:i+1])\n",
+    "        for abstr in selection:\n",
+    "            phrases = [k.strip() for k in  abstr.keywords.split(\";\")]\n",
+    "            for phr in phrases:\n",
+    "                words = [ps.stem(w) if all(ord(c) < 128 for c in w) else None for w in phr.split(\" \")]\n",
+    "                string = \"\"\n",
+    "                for w in words:\n",
+    "                    if w != None:\n",
+    "                        string = string +\" \"+ w\n",
+    "                string = string.strip()\n",
+    "                if len(string) > 2:\n",
+    "                    keyphraseTracker.track(string,abstr.date.year)\n",
+    "        #continue to next section\n",
+    "        continue\n",
     "        corpus = createCorpus(selection)\n",
     "        path = docs+'GephiFiles/'+str(selection[0].date.year)+'/'\n",
     "        try:\n",
@@ -301,7 +377,9 @@
     "        #####\n",
     "        exportResults(path,sortedVals,occurences[0])\n",
     "        size = 0\n",
-    "        start = i+1"
+    "        start = i+1\n",
+    "for y in keyphraseTracker.topN():\n",
+    "    print str(y.getPhrase())+\", \"+str(y.sum())"
    ]
   },
   {
@@ -357,7 +435,6 @@
     "        topicOrganizingFile.write(topwords+\"\\t\")\n",
     "    topicOrganizingFile.write(\"\\n\")\n",
     "topicOrganizingFile.close()\n",
-    "\n",
     "        "
    ]
   },
@@ -442,20 +519,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "0\n",
-      "1\n"
-     ]
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "ps.stem(\"honey\") in [y.getPhrase() for y in keyphraseTracker.topN(topn=200)]"
+   ]
   },
   {
    "cell_type": "code",
