--- a/src/TopicModeling.ipynb
+++ b/src/TopicModeling.ipynb
@@ -355,7 +355,6 @@
     "                if len(string) > 2:\n",
     "                    keyphraseTracker.track(string,abstr.date.year)\n",
     "        #continue to next section\n",
-    "        continue\n",
     "        corpus = createCorpus(selection)\n",
     "        path = docs+'GephiFiles/'+str(selection[0].date.year)+'/'\n",
     "        try:\n",
@@ -519,22 +518,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1985: 1, 2001: 1, 2004: 1, 2005: 1, 1999: 1}\n"
+     ]
     }
    ],
    "source": [
-    "ps.stem(\"honey\") in [y.getPhrase() for y in keyphraseTracker.topN(topn=200)]"
+    "y = keyphraseTracker.words[ps.stem(\"colony\")]\n",
+    "print y.years"
    ]
   },
   {
