Fixed file calls

--- a/src/Figures.ipynb
+++ b/src/Figures.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,33 +11,38 @@
     "# This Counts the number of publications per year\n",
     "\n",
     "year_num = {}\n",
-    "for filename in os.listdir('.'):\n",
-    "    if \".csv\" in filename and \"KeywordSynonym\" not in filename:\n",
-    "        f = open(\"./\"+filename)\n",
-    "        print filename\n",
-    "        f.readline()\n",
-    "        for line in f:\n",
-    "            year = line.split(\"\\\",\")[2][:4]\n",
-    "            if year in year_num:\n",
-    "                year_num[year]+=1\n",
-    "            else:\n",
-    "                year_num[year]=1\n",
+    "for root,dirs,files in os.walk('../data/documents/'):\n",
+    "    if \"2006\" in root:\n",
+    "        for filename in files:\n",
+    "            f = open(root+\"/\"+filename)\n",
+    "            f.readline()\n",
+    "            for line in f:\n",
+    "                year = line.split(\"\\\",\")[2][:4]\n",
+    "                if year in year_num:\n",
+    "                    year_num[year]+=1\n",
+    "                else:\n",
+    "                    year_num[year]=1\n",
     "delete_list = []\n",
     "for key in year_num:\n",
     "    if any(s in key for s in(\"\\\"\",\"Bah\")):\n",
     "        delete_list.append(key)\n",
     "for key in delete_list:\n",
-    "    year_num.pop(key,None)\n",
-    "        \n",
-    "print year_num\n",
-    "            "
+    "    year_num.pop(key,None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4647 4915 4522\n"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -68,16 +73,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['honey bee', 'african honey bee', 'api mellifera jemenitica', 'api mellifera adansonii', 'api mellifera anatoliaca', 'api mellifera iberiensi', 'api mellifera meda', 'api mellifera mellifera', 'api mellifera caucasica', 'api mellifera intermissa', 'api mellifera syriaca', 'api mellifera macedonica', 'api mellifera carnica pollmann 1879', 'api mellifera capensi', 'gene flow', 'asian honey bee', 'api dorsata', 'api laboriosa', 'api florea', 'bee', 'api', 'apida', 'bumblebee', 'stingless bee', 'native bee', 'drosophila', 'wasp', 'ant', 'hoverfli', 'bombyx mori', 'mosquito', 'insect', 'hymenoptera', 'social insect', 'insect pollin', 'pesticid', 'neonicotinoid', 'nicotin', 'imidacloprid', 'insecticid', 'acaricid', 'miticid', 'thymol', 'thiamethoxam', 'fipronil', 'clothianidin', 'fluvalin', 'pyrethroid', 'coumapho', 'amitraz', 'fungicid', 'flumethrin', 'pesticid residu', 'formic acid', 'oxalic acid', 'bacillu thuringiensi', 'varroa destructor', 'varroa jacobsoni', 'varroa', 'spore', 'mite', 'parasit mite', 'nosema cerana', 'nosema api', 'nosema', 'acarapis', 'acari', 'american foulbrood', 'european foulbrood', 'chalkbrood', 'deformed wing virus', 'sacbrood virus', 'chronic bee paralysis virus', 'acute bee paralysis virus', 'black queen cell viru', 'kashmir bee viru', 'virus', 'dicistrovirida', 'small hive beetl', 'wax moth', 'pathogen', 'disease', 'patholog', 'parasitoid', 'brood diseas', 'parasite', 'pest', 'microsatellite', 'gene express', 'transcriptom', 'microarray', 'rna-seq', 'pcr', 'rt-pcr', 'gpcr', 'rflp', 'electrophoresi', 'cdna clone', 'dna methyl', 'cdna', 'sequenc', 'qtl', 'polymorph', 'snp', 'genet marker', 'molecular marker', 'epigenet', 'diagnosis', 'morphometry', 'phylogeny', 'proteom', 'mass spectrometri', 'allozym', 'ga chromatographi', 'gc-m', 'mathemat model', 'immunocytochemistri', 'histolog', 'scan electron microscopi', 'electron microscopi', 'instrument insemin', 'multivari analysi', 'mtdna', 'genom', 'rna interfer', 'propolis', 'hygienic behavior', 'grooming behavior', 'immunity', 'antimicrobial', 'defensin', 'abaecin', 'social immun', 'russian honey bee', 'flavonoid', 'honey', 'nectar', 'pollen', 'wax', 'yield', 'bee product', 'pollen load', 'pollen collect', 'pollen type', 'olfactori learn', 'worker polic', 'forag behaviour', 'defense behavior', 'social behavior', 'alarm pheromon', 'queen pheromon', 'swarm', 'venom', 'danc languag', 'divis of labour', 'cuticular hydrocarbon', 'proboscis extension reflex', 'pheromon', 'brood pheromon', 'thermoregul', 'mitochondria', 'gene regul', 'transcript factor', 'biogen amin', 'octopamin', 'juvenil hormon', 'protein', 'vitellogenin', 'antenn lobe', 'antioxidant', 'ecdysteroid', 'metamorphosi', 'microrna', 'mushroom bodi', 'brain', 'metabol', 'apoptosi', 'hemolymph', 'caffeic acid phenethyl ester', 'neuropeptid', 'acetylcholinesteras', 'melittin', 'dopamin', 'hypopharyng gland', 'royal jelly']\n"
+     ]
+    }
+   ],
    "source": [
     "# This synonymizes the words based on the rules provided by the biology department\n",
     "\n",
     "syns = {}\n",
     "keywords = []\n",
     "unaltered_keywords = {}\n",
-    "with open(\"./KeywordSynonym.csv\",\"r\") as f:\n",
+    "with open(\"../data/KeywordSynonym.csv\",\"r\") as f:\n",
     "    f.readline()\n",
     "    for line in f:\n",
     "        if len(line.split(\",\")[1])>1:\n",
@@ -93,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,10 +119,10 @@
     "    for year in range(1957,2019):\n",
     "        keyword_year_num[key][year] = 0\n",
     "\n",
-    "for filename in os.listdir('.'):\n",
-    "    if \".csv\" in filename and \"KeywordSynonym\" not in filename:\n",
-    "        f = open(\"./\"+filename)\n",
-    "        print filename\n",
+    "for root,dirs,files in os.walk('../data/documents/'):\n",
+    "    if \"2006\" in root:\n",
+    "        for filename in files:\n",
+    "            f = open(root+\"/\"+filename)\n",
     "        f.readline()\n",
     "        for line in f:\n",
     "            year = line.split(\"\\\",\")[2][:4]\n",
@@ -117,13 +130,12 @@
     "                line = \"\"\n",
     "            for key in keywords:\n",
     "                if key in line.lower():\n",
-    "                    keyword_year_num[key][int(year)]+=1\n",
-    "print keyword_year_num"
+    "                    keyword_year_num[key][int(year)]+=1\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,8 +145,6 @@
     "\n",
     "for key in keyword_year_num:\n",
     "    current = keyword_year_num[key]\n",
-    "#     print year_num[str(1957)]\n",
-    "    print key\n",
     "    x_val = []\n",
     "    y_val = []\n",
     "    \n",
@@ -143,7 +153,6 @@
     "    test = sorted(current)\n",
     "    for year in test:\n",
     "        x_val.append(year)\n",
-    "#         print (float(current[year])/year_num[year])\n",
     "        y_val.append(float(current[int(year)])/year_num[str(year)])\n",
     "    plt.xlim(1955,2017)\n",
     "    plt.plot(x_val,y_val)\n",
@@ -214,10 +223,10 @@
     "def grey_color_func(word, font_size, position, orientation, random_state=None,**kwargs):\n",
     "    return \"hsl(0, 0%%, %d%%)\" % random.randint(0, 0)\n",
     "\n",
-    "for filename in os.listdir('./Latest/'):\n",
+    "for filename in os.listdir('../data/FirstOccurance/'):\n",
     "    if filename[0]>'A':\n",
     "        continue\n",
-    "    f = open(\"./Latest/\"+filename,\"r\")\n",
+    "    f = open(\"../data/FirstOccurance/\"+filename,\"r\")\n",
     "    diction = {}\n",
     "    for line in f:\n",
     "        temp = \"\"\n",
@@ -227,22 +236,14 @@
     "        else:\n",
     "            temp = line.split(\",\")[0]\n",
     "        diction[temp] = int(line.split(\",\")[-1])\n",
-    "    diction = {'Foraging': 185, 'Royal jelly': 114, 'Pollination': 393, 'Apis': 133, 'Hymenoptera': 177, 'Apis mellifera': 480, 'Insect': 119, 'Bees': 140, 'Apidae': 117, 'Apis cerana': 162}\n",
     "    wordcloud = WordCloud(width=900,height=500, max_words=21,relative_scaling=1,normalize_plurals=False,background_color='White').generate_from_frequencies(diction)\n",
     "\n",
     "    print diction\n",
     "    plt.imshow(wordcloud.recolor(color_func=grey_color_func, random_state=3), interpolation='bilinear')\n",
     "    plt.axis(\"off\")\n",
-    "    plt.savefig(\"./Latest/\"+filename[:-4]+\"Cloud.eps\",dpi=1200)\n",
+    "    plt.savefig(\"./\"+filename[:-4]+\"Cloud.eps\",dpi=1200)\n",
     "    plt.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
